Implement 'Empty trash on exit' functionality

BUG: 261055